--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-requests
-youtube-transcript-api
-huggingface_hub
+Flask==2.3.2
+YouTubeTranscriptApi==0.6.1
+requests==2.31.0
+python-dotenv==1.0.0
+groq==0.1.4
